--- a/index.html
+++ b/index.html
@@ -414,7 +414,6 @@
                             <a href="https://www.credential.net/ba3279d9-b5e5-4668-beed-f986f3ee4c23" target="_blank"
                                 class="certificate__link">5F60DC7 <i class='bx bx-link-external'></i></a>
                         </div>
-
                         <!--========== PAGE-BREAK ==========-->
                         <div class="html2pdf__page-break"></div>
 
@@ -451,19 +450,17 @@
 
                     <div class="references__container bd-grid">
                         <div class="references__content bd-grid">
-                            <span class="references__subtitle">Sr. Director</span>
-                            <h3 class="references__title">Sr. TESTE</h3>
+                            <span class="references__subtitle">Tech Lead</span>
+                            <h3 class="references__title">Cintia Trissila</h3>
                             <ul class="references__contact">
-                                <li>Phone: 999-888-777</li>
-                                <li>E-mail: teste@teste.com.br</li>
+                                <li>E-mail: cintia.rensch@softexpert.com</li>
                             </ul>
                         </div>
                         <div class="references__content bd-grid">
-                            <span class="references__subtitle">Sr. Director</span>
-                            <h3 class="references__title">Sr. TESTE</h3>
+                            <span class="references__subtitle">Manager</span>
+                            <h3 class="references__title">Arthur Schimidli</h3>
                             <ul class="references__contact">
-                                <li>Phone: 999-888-777</li>
-                                <li>E-mail: teste@teste.com.br</li>
+                                <li>E-mail: arthur.schmidlin@softexpert.com</li>
                             </ul>
                         </div>
                     </div>
