--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
-                                <span class="experience__line"></span>
+                                <!-- <span class="experience__line"></span> -->
                             </div>
 
                             <div class="experience__data bd-grid">
@@ -453,14 +453,14 @@
                             <span class="references__subtitle">Tech Lead</span>
                             <h3 class="references__title">Cintia Trissila</h3>
                             <ul class="references__contact">
-                                <li>E-mail: cintia.rensch@softexpert.com</li>
+                                <li>cintia.rensch@softexpert.com</li>
                             </ul>
                         </div>
                         <div class="references__content bd-grid">
                             <span class="references__subtitle">Manager</span>
                             <h3 class="references__title">Arthur Schimidli</h3>
                             <ul class="references__contact">
-                                <li>E-mail: arthur.schmidlin@softexpert.com</li>
+                                <li>arthur.schmidlin@softexpert.com</li>
                             </ul>
                         </div>
                     </div>
