--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                                 <h3 class="experience__title">Java Software Engineer</h3>
                                 <span class="experience__company">From 05/2021 to today | SoftExpert</span>
                                 <p class="experience__description">
-                                    Participation of Team Back-End System Engineers, focusing on the following SoftExpert Suite resources;
+                                    Participation of Team Back-End System Engineers, focusing on the following SoftExpert Suite resources;<br>
                                     • General search<br>
                                     • Email engine<br>
                                     • Dynamic entities<br>
@@ -320,12 +320,12 @@
                                 <h3 class="experience__title">ERP TOTVS Protheus Specialist</h3>
                                 <span class="experience__company">From 05/2021 to 11/2021 | Azul Seguros</span>
                                 <p class="experience__description">Porto Seguro "Bllu" product <br>
-                                    - Participation in the agile product team<br>
-                                    - Squad member with technical bias TOTVS Protheus<br>
-                                    - Support in the integration of the FRONT-END and BACK-END fronts between legacy
+                                    • Participation in the agile product team<br>
+                                    • Squad member with technical bias TOTVS Protheus<br>
+                                    • Support in the integration of the FRONT-END and BACK-END fronts between legacy
                                     systems<br>
-                                    - Testing and Approval of new features<br>
-                                    - Support support in production cases<br></p>
+                                    • Testing and Approval of new features<br>
+                                    • Support support in production cases<br></p>
                             </div>
                         </div>
                         <div class="experience__content">
