Ajust information profile

--- a/index.html
+++ b/index.html
@@ -150,14 +150,17 @@
                 <section class="profile section" id="profile">
                     <h2 class="section-title">Profile</h2>
                     <p class="profile_description">
-                        Extensive experience with legacy systems, integrations and new implementations.
-                        Focused on his studies in Java, JavaScript and Python languages, which can be consulted on the GitHub platform.                        
-                        Experience in requirements gathering, deployment, systems support, information integrity and CI / CD.
-                        MBA Information System Projects and degrees in two technological areas Development of Web Systems and Computer Networks, 
-                        currently working as Software Engineers at SoftExpert, applying good practices acquired through certifications 
-                        (DevOps, Agile Scrum and Lean It) applying engineering frameworks of software with the use of object-oriented standards, 
-                        with priority on improving the process and efficiency in the construction of solutions, maintenance of software and 
-                        execution of operational processes.
+                        Extensive experience with legacy systems, integrations and new implementations. Experience in requirements gathering, 
+                        implementation, systems support, information integrity and CI / CD. MBA Information System Projects and graduations 
+                        in two technological areas Development of Web Systems and Computer Networks, he is currently working as a 
+                        Software Engineer at SoftExpert, applying good practices acquired through certifications (DevOps, Agile Scrum and 
+                        Lean It) applying engineering frameworks of software with the use of object-oriented patterns, with priority on improving 
+                        the process and efficiency in building solutions, maintaining software and executing operational processes. 
+                        • REST API development with Java, SpringBoot, JPA and JSON. 
+                        • Use of the following DBMS: Oracle, Postgres and MSSQL. (CRUD, DDL, DML and Querys to complement the development of 
+                        the solution) 
+                        • Development of unit tests using JUnit. 
+                        • Code versioning in Git.
                     </p>
                 </section>
                 <!--========== PAGE-BREAK ==========-->
