--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
                     <p class="profile_description">
                         Extensive experience with legacy systems, integrations and new implementations. Experience in requirements gathering, 
                         implementation, systems support, information integrity and CI / CD. MBA Information System Projects and graduations 
-                        in two technological areas Development of Web Systems and Computer Networks, he is currently working as a 
-                        Software Engineer at SoftExpert, applying good practices acquired through certifications (DevOps, Agile Scrum and 
-                        Lean It) applying engineering frameworks of software with the use of object-oriented patterns, with priority on improving 
-                        the process and efficiency in building solutions, maintaining software and executing operational processes. 
-                        • REST API development with Java, SpringBoot, JPA and JSON. 
+                        in two technological areas Development of Web Systems and Computer Networks, applying good practices acquired through 
+                        certifications (DevOps, Agile Scrum and Lean It) applying engineering frameworks of software with the use of 
+                        object-oriented patterns, with priority on improving the process and efficiency in building solutions, maintaining 
+                        software and executing operational processes. <br>
+                        • REST API development with Java, SpringBoot, JPA and JSON. <br>
                         • Use of the following DBMS: Oracle, Postgres and MSSQL. (CRUD, DDL, DML and Querys to complement the development of 
-                        the solution) 
-                        • Development of unit tests using JUnit. 
-                        • Code versioning in Git.
+                        the solution) <br>
+                        • Development of unit tests using JUnit. <br>
+                        • Code versioning in Git.<br>
                     </p>
                 </section>
                 <!--========== PAGE-BREAK ==========-->
@@ -301,16 +301,22 @@
 
                             <div class="experience__data bd-grid">
                                 <h3 class="experience__title">Java Software Engineer</h3>
-                                <span class="experience__company">From 05/2021 to today | SoftExpert</span>
+                                <span class="experience__company">From 11/2021 to 03/2023 | SoftExpert</span>
                                 <p class="experience__description">
-                                    Participation of Team Back-End System Engineers, focusing on the following SoftExpert Suite resources;<br>
-                                    • General search<br>
+                                    Generalist profile of several projects<br>
+                                    Experience in Java 8 and 11<br>
+                                    Participation of the Back-End System Engineers Team, focusing on the following features of the SoftExpert Suite;<br>
+                                    • General search (File Text Search - Elasticsearch)<br>
                                     • Email engine<br>
-                                    • Dynamic entities<br>
+                                    • Dynamic Entities<br>
                                     • My Tasks<br>
                                     • Data sources<br>
                                     • Data set<br>
-                                    • API Gateway<br></p>
+                                    • API Gateway<br>
+                                    Experience in the following DBMS: Oracle, Postgres and MSSQL (CRUD, DDL, DML and Complement Querys for the solution.)<br>
+                                    Experience with integration of RESTful APIs, SOAP, WSDL.<br>
+                                    Knowledge in integration architecture (API, Gateway).<br>
+                                    Experience with agile processes and ceremonies.<br>
                             </div>
                         </div>
                         <div class="experience__content">
